replace glyphicons with html symbols

--- a/calendarapp/templates/main.html
+++ b/calendarapp/templates/main.html
@@ -36,7 +36,7 @@
 				<div class='col-md-1 {{day.class}}' id='{{day.id}}' onclick='rollout(this)'>
 				<h2 class='text-center'>{{day.day}}
 				{% if day.has_event == True %}
-					<span class="glyphicon glyphicon-list"></span>
+					<span><p style="font-size:20px;font-stretch:ultra-condensed;display:inline;">&#9783</p></span>
 				{% endif %}
 				</h2>
 				</div>
