--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
 <body>
 	{% block calendarapp %}{% endblock %}
 			<div class='collapse'>
-			<div class="panel panel-default col-md-7">
+			<div class="panel panel-default col-sm-7">
 				<div class="panel-header">
 					<h3>Список событий</h3>
 				</div>
